--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -3,21 +3,27 @@ server:
 spring:
   application:
     name: "loans"
+
   profiles:
     active: "prod"
+
   datasource:
     url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
+    driver-class-name: org.h2.Driver
     username: sa
     password: ''
+
   h2:
     console:
       enabled: true
+
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate.format_sql: true
   config:
     import: "optional:configserver:http://configserver:8071/"
 
