--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -52,6 +52,20 @@ management:
     env:
       enabled: true
 
+
+  cloud:
+    openfeign:
+      circuitbreaker:
+        enabled=true:
+
+resilience4j.circuitbreaker:
+  configs:
+    default:
+      slidingWindowSize: 10
+      permittedNumberOfCallsInHalfOpenState: 2
+      failureRateThreshold: 50
+      waitDurationInOpenState: 10s
+
 info:
   app:
     name: "accounts"
