--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
   port: 8080
+
 spring:
   application:
     name: accounts
@@ -32,26 +33,25 @@ management:
   endpoints:
     web:
       exposure:
-        include: "*"           # expose all endpoints including shutdown
+        include: "*"
       base-path: /actuator
+
   endpoint:
     health:
       show-details: when-authorized
-    shutdown:
-      enabled: true            # enable shutdown endpoint
-
-  health:
-    probes:
-      enabled: true
-    livenessstate:
-      enabled: true
-    readinessstate:
-      enabled: true
+      probes:
+        enabled: true
+      group:
+        liveness:
+          include: livenessState
+        readiness:
+          include: readinessState
+    gateway:
+      access: unrestricted
 
   info:
     env:
       enabled: true
-
 
   cloud:
     openfeign:
