--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -32,21 +32,21 @@ management:
   endpoints:
     web:
       exposure:
-        include: "*"           # expose all endpoints including shutdown
+        include: "*"
       base-path: /actuator
+
   endpoint:
     health:
       show-details: when-authorized
-    shutdown:
-      enabled: true            # enable shutdown endpoint
-
-  health:
-    probes:
-      enabled: true
-    livenessstate:
-      enabled: true
-    readinessstate:
-      enabled: true
+      probes:
+        enabled: true
+      group:
+        liveness:
+          include: livenessState
+        readiness:
+          include: readinessState
+    gateway:
+      access: unrestricted
 
   info:
     env:
