--- a/gatewayserver/src/main/resources/application.yml
+++ b/gatewayserver/src/main/resources/application.yml
@@ -11,8 +11,12 @@ spring:
         webflux:
           discovery:
             locator:
-              enabled: false
+              enabled: false  # Keep disabled if using manual routes
               lower-case-service-id: true
+
+          httpclient:
+            connect-timeout: 1000
+            response-timeout: 2s
 
 management:
   endpoints:
@@ -31,6 +35,7 @@ management:
           include: livenessState
         readiness:
           include: readinessState
+
     gateway:
       access: unrestricted
 
@@ -44,24 +49,29 @@ info:
     description: "ezyPay apigateway Application"
     version: "1.0.0"
 
+resilience4j:
+  circuitbreaker:
+    configs:
+      default:
+        slidingWindowSize: 10
+        permittedNumberOfCallsInHalfOpenState: 2
+        failureRateThreshold: 50
+        waitDurationInOpenState: 10s
+        eventConsumerBufferSize: 10  # Add this if you want to see circuit breaker events
+#    instances:
+#      accounts:
+#        baseConfig: default
+#        registerHealthIndicator: true
+#      cards:
+#        baseConfig: default
+#        registerHealthIndicator: true
+#      loans:
+#        baseConfig: default
+#        registerHealthIndicator: true
+
 logging:
   level:
     com.microservices.gatewayserver: DEBUG
     org.springframework.cloud.gateway: INFO
     org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator: INFO
     org.springframework.cloud.gateway.filter.GatewayMetricsFilter: INFO
-
-resilience4j.circuitbreaker:
-  configs:
-    default:
-      slidingWindowSize: 10
-      permittedNumberOfCallsInHalfOpenState: 2
-      failureRateThreshold: 50
-      waitDurationInOpenState: 10s
-
-# Optional RabbitMQ settings if needed in future
-# rabbitmq:
-#   host: localhost
-#   port: 5672
-#   username: guest
-#   password: guest
