--- a/docker-compose/default/docker-compose.yml
+++ b/docker-compose/default/docker-compose.yml
@@ -1,94 +1,56 @@
 services:
-
-#  rabbit:
-#    image: rabbitmq:3-management
-#    container_name: rabbitmq-ms
-#    ports:
-#      - "5672:5672"
-#      - "15672:15672"
-#    healthcheck:
-#      test: ["CMD", "rabbitmqctl", "status"]
-#      start_period: 10s
-#      interval: 10s
-#      timeout: 5s
-#      retries: 5
-#    extends:
-#      file: common-config.yml
-#      service: network-deploy-service
-
   accountsdb:
-    image: mysql
+    image: mysql:8.0
     container_name: accountsdb
     ports:
       - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: accountsdb
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      timeout: 10s
-      retries: 10
-      interval: 10s
-      start_period: 10s
     extends:
       file: common-config.yml
       service: network-deploy-service
 
   loansdb:
-    image: mysql
+    image: mysql:8.0
     container_name: loansdb
     ports:
       - "3307:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: loansdb
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      timeout: 10s
-      retries: 10
-      interval: 10s
-      start_period: 10s
     extends:
       file: common-config.yml
       service: network-deploy-service
 
   cardsdb:
-    image: mysql
+    image: mysql:8.0
     container_name: cardsdb
     ports:
       - "3308:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: cardsdb
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      timeout: 10s
-      retries: 10
-      interval: 10s
-      start_period: 10s
     extends:
       file: common-config.yml
       service: network-deploy-service
 
+  # Configuration and Service Discovery
   configserver:
     image: "sushantpaudel77/configserver"
     container_name: configserver-ms
     ports:
       - "8071:8071"
-    depends_on:
-      eurekaserver:
-        condition: service_healthy
     healthcheck:
-      test: [ "CMD-SHELL", "curl --fail --silent http://localhost:8071/actuator/health/readiness || exit 1" ]
-      start_period: 20s
+      test: "curl --fail --silent localhost:8071/actuator/health/readiness | grep UP || exit 1"
       interval: 10s
       timeout: 5s
       retries: 10
+      start_period: 10s
     environment:
       SPRING_APPLICATION_NAME: configserver
-      SPRING_PROFILES_ACTIVE: default
-      MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE: health,info,refresh,busrefresh
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
+      SPRING_PROFILES_ACTIVE: git
+      ENCRYPT_KEY: fdohfdfo30r3nr0u23rkoewf0892u3r0938jn3f30r309
     extends:
       file: common-config.yml
       service: microservice-base-config
@@ -98,58 +60,48 @@ services:
     container_name: eurekaserver-ms
     ports:
       - "8070:8070"
+    depends_on:
+      configserver:
+        condition: service_healthy
     healthcheck:
-      test: [ "CMD-SHELL", "curl --fail --silent http://localhost:8070/actuator/health/readiness || exit 1" ]
-      start_period: 20s
+      test: "curl --fail --silent localhost:8070/actuator/health/readiness | grep UP || exit 1"
       interval: 10s
       timeout: 5s
       retries: 10
-    environment:
-      SPRING_APPLICATION_NAME: eurekaserver
-      MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE: health,info,refresh,busrefresh
+      start_period: 10s
     extends:
       file: common-config.yml
-      service: microservice-base-config
+      service: microservice-configserver-config
+    environment:
+      SPRING_APPLICATION_NAME: "eurekaserver"
 
+  # Microservices
   accounts:
     image: "sushantpaudel77/accounts"
     container_name: account-ms
     ports:
       - "8080:8080"
     depends_on:
+      accountsdb:
+        condition: service_started
       configserver:
         condition: service_healthy
       eurekaserver:
         condition: service_healthy
-      accountsdb:
-        condition: service_healthy
+    healthcheck:
+      test: "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
     environment:
       SPRING_APPLICATION_NAME: accounts
-      SPRING_DATASOURCE_URL: "jdbc:mysql://accountsdb:3306/accountsdb"
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
+      SPRING_DATASOURCE_URL: jdbc:mysql://accountsdb:3306/accountsdb
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
     extends:
       file: common-config.yml
-      service: microservice-with-import
-
-  cards:
-    image: "sushantpaudel77/cards"
-    container_name: cards-ms
-    ports:
-      - "9000:9000"
-    depends_on:
-      configserver:
-        condition: service_healthy
-      eurekaserver:
-        condition: service_healthy
-      cardsdb:
-        condition: service_healthy
-    environment:
-      SPRING_APPLICATION_NAME: cards
-      SPRING_DATASOURCE_URL: "jdbc:mysql://cardsdb:3306/cardsdb"
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
-    extends:
-      file: common-config.yml
-      service: microservice-with-import
+      service: microservice-eureka-config
 
   loans:
     image: "sushantpaudel77/loans"
@@ -157,39 +109,77 @@ services:
     ports:
       - "8090:8090"
     depends_on:
+      loansdb:
+        condition: service_started
       configserver:
         condition: service_healthy
       eurekaserver:
         condition: service_healthy
-      loansdb:
-        condition: service_healthy
+    healthcheck:
+      test: "curl --fail --silent localhost:8090/actuator/health/readiness | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
     environment:
       SPRING_APPLICATION_NAME: loans
-      SPRING_DATASOURCE_URL: "jdbc:mysql://loansdb:3306/loansdb"
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
+      SPRING_DATASOURCE_URL: jdbc:mysql://loansdb:3306/loansdb
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
     extends:
       file: common-config.yml
-      service: microservice-with-import
+      service: microservice-eureka-config
 
-  loans1:
-    image: "sushantpaudel77/loans"
-    container_name: loans-ms1
+  cards:
+    image: "sushantpaudel77/cards"
+    container_name: cards-ms
     ports:
-      - "8091:8090"
+      - "9000:9000"
     depends_on:
+      cardsdb:
+        condition: service_started
       configserver:
         condition: service_healthy
       eurekaserver:
         condition: service_healthy
-      loansdb:
-        condition: service_healthy
+    healthcheck:
+      test: "curl --fail --silent localhost:9000/actuator/health/readiness | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
     environment:
-      SPRING_APPLICATION_NAME: loans
-      SPRING_DATASOURCE_URL: "jdbc:mysql://loansdb:3306/loansdb"
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
+      SPRING_APPLICATION_NAME: cards
+      SPRING_DATASOURCE_URL: jdbc:mysql://cardsdb:3306/cardsdb
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
     extends:
       file: common-config.yml
-      service: microservice-with-import
+      service: microservice-eureka-config
+
+  gatewayserver:
+    image: "sushantpaudel77/gatewayserver"
+    container_name: gatewayserver-ms
+    ports:
+      - "8072:8072"
+    depends_on:
+      accounts:
+        condition: service_healthy
+      loans:
+        condition: service_healthy
+      cards:
+        condition: service_healthy
+    healthcheck:
+      test: "curl --fail --silent localhost:8072/actuator/health/readiness | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+    environment:
+      SPRING_APPLICATION_NAME: gatewayserver
+    extends:
+      file: common-config.yml
+      service: microservice-eureka-config
 
 networks:
   my-banking-application:
